--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,14 @@ name: build-test
 on: [push]
 jobs:
   run-anchor-build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: metadaoproject/setup-anchor@v2
+        with:
+          anchor-version: '0.30.1'
+          solana-cli-version: '1.18.18'
+          node-version: '22.2.0'
       - run: anchor build
         shell: bash
       - run: anchor test
