--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -66,7 +66,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install Anchor
-        run: npm i -g @coral-xyz/anchor-cli
+        run: npm i -g @coral-xyz/anchor
         shell: bash
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
