--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-adapter-react-ui": "^0.9.31",
+    "@coral-xyz/anchor": "^0.30.1",
     "@solana/web3.js": "^1.77.3",
     "@tailwindcss/forms": "^0.5.3",
     "next": "^14.0.4",
