--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,15 @@ jobs:
           anchor-version: '0.30.1'
           solana-cli-version: '1.18.18'
           node-version: '22.2.0'
-      - run: anchor build
-        shell: bash
-      - run: anchor test
-        shell: bash
+      - name: Generate new keygen
+        run: solana-keygen new
+      - name: Set solana target cluster to local
+        run: solana config set --url http:localhost:8899
+      - name: Check solana config
+        run: solana config get
+      - name: Install yarn dependencies
+        run: yarn install
+      - name: Build
+        run: anchor build
+      - name: Run tests
+        run: anchor test
