--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,12 @@ jobs:
           anchor-version: '0.30.1'
           solana-cli-version: '1.18.18'
           node-version: '22.2.0'
+      - name: List rustup toolchains
+        run: rustup toolchain list
+      - name: Set default toolchain
+        run: rustup default stable
+      - name: List rustup toolchains
+        run: rustup toolchain list
       - name: Generate new keygen
         run: solana-keygen new
       - name: Set solana target cluster to local
