--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,7 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
       - uses: mrgnlabs/anchor-test-action@v0.4
         with:
-          anchor-version: '0.30.1'
-          solana-cli-version: '1.18.18'
-          node-version: '22.2.0'
+          workspace_dir: "."
       - name: Install yarn dependencies
         run: yarn install
       - name: Build
