--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,33 @@
 name: build-test
 on: [push]
+
+env:
+  SOLANA_VERSION: v1.9.9
+  ANCHOR_VERSION: 0.24.2
+
 jobs:
-  run-anchor-build:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: mrgnlabs/anchor-test-action@v0.4
+      - name: Use Node.js
+      - uses: actions/setup-node@v3
         with:
-          workspace_dir: "."
-      - name: Install yarn dependencies
-        run: yarn install
-      - name: Build
-        run: anchor build
-      - name: Run tests
-        run: anchor test
+          node-version: 16.14.2
+          cache: "npm"
+      - run: npm install
+      - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        shell: bash
+      - run: echo "/home/runner/.cargo/bin" >> $GITHUB_PATH
+        shell: bash
+      - run: curl -sSfL https://release.solana.com/$SOLANA_VERSION/install | sh
+        shell: bash
+      - run: echo "/home/runner/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
+        shell: bash
+      - run: npm i -g @project-serum/anchor-cli@$ANCHOR_VERSION ts-mocha typescript
+      - run: anchor test
+
+      # - name: Build
+      #   run: anchor build
+      # - name: Run tests
+      #   run: anchor test
