--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
           anchor-version: '0.28.0' 
           solana-cli-version: '1.14.20'
           node-version: '16.15.1'
+          rust-version: '1.78.0'
       - run: anchor build
         shell: bash 
       - run: anchor test
