--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: metadaoproject/setup-anchor@v2
         with: 
-          anchor-version: '0.28.0' 
-          solana-cli-version: '1.14.20'
-          node-version: '16.15.1'
-      - run: rustup update
-        shell: bash
+          anchor-version: '0.3°.1' 
+          solana-cli-version: '1.18.17'
+          node-version: '20.15.1'
       - run: anchor build
         shell: bash 
       - run: anchor test
