--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: metadaoproject/setup-anchor@v2
         with: 
-          anchor-version: '0.3°.1' 
+          anchor-version: '0.30.1' 
           solana-cli-version: '1.18.17'
           node-version: '20.15.1'
       - run: anchor build
