--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,24 @@ jobs:
           anchor-version: '0.30.1'
           solana-cli-version: '1.18.18'
           node-version: '22.2.0'
+
       - run: anchor build
         shell: bash
-      - run: anchor test
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Create keypair
+        run: solana-keygen new --no-bip39-passphrase
+        shell: bash
+
+      - name: Make Anchor.toml compatible with runner
+        run: sed -i 's:/user/:/runner/:' Anchor.toml
+        shell: bash
+
+      - name: Cache Cargo dependencies
+        uses: Swatinem/rust-cache@v2
+
+      - name: Run test
+        run: anchor test
         shell: bash
